tests/pass/PlusPlus.java
//package pass;
//
//public class PlusPlus {
//    public int plusEqual(int x) {
//        x ++;
//        return x;
//    }
//}
