tests/fail/PlusEqual.java
package fail;

public class PlusEqual {
    public static void main(String[] args) {
        int x;
        System.out.println(x += "hej");
    }
}
